# nbody

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  PreLoad.cmake  README.md  cuda.md  nbody.md  openacc.md  openmp.md  solomon.md  stdpar.md
cmake/: apply_common_settings.cmake  set_compile_flag.cmake  set_target_cpu.cmake  set_target_gpu.cmake
cpp/base/: CMakeLists.txt  nbody_leapfrog2.cpp
cpp/base/0_base/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/base/1_simd/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/common/: cfg.hpp  conservatives.hpp  init.hpp  io.hpp  type.hpp
cpp/cuda/: CMakeLists.txt
cpp/cuda/00_unified_base/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/01_unified_rsqrt/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/02_unified_shmem/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/0_base/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/10_memcpy_base/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/11_memcpy_rsqrt/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/12_memcpy_shmem/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/cuda/exercise/: CMakeLists.txt  nbody_hermite4.cu  nbody_leapfrog2.cu
cpp/omp_loop/: nbody_hermite4.cpp
cpp/omp_simd/: nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/omp_target/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openacc/: CMakeLists.txt  README.md
cpp/openacc/0_managed/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openacc/0_unified/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openacc/1_data/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openacc/exercise/: CMakeLists.txt  nbody_leapfrog2.cpp
cpp/openmp/: CMakeLists.txt
cpp/openmp/0_dist/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openmp/1_dist_data/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openmp/a_loop/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openmp/b_loop_data/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/openmp/exercise/: CMakeLists.txt  nbody_hermite4.cpp
cpp/pragma/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp  pragma_acc.hpp  pragma_gpu.hpp  pragma_gpu_acc.hpp  pragma_gpu_omp.hpp  pragma_offload.hpp  pragma_omp.hpp  pragma_omp_target.hpp
cpp/solomon/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/stdpar/: CMakeLists.txt  nbody_hermite4.cpp  nbody_leapfrog2.cpp
cpp/util/: hdf5.hpp  macro.hpp  timer.hpp  type.hpp
gallery/conservation/log/: hermite_run.csv  leapfrog_run.csv
gallery/performance/log/: hermite_run.csv  leapfrog_run.csv
gallery/validation/dat/: hermite4096_snp000.h5  hermite4096_snp000.xdmf  hermite4096_snp005.h5  hermite4096_snp005.xdmf  hermite4096_snp010.h5  hermite4096_snp010.xdmf  hermite4096_snp015.h5  hermite4096_snp015.xdmf  hermite4096_snp020.h5  hermite4096_snp020.xdmf  hermite4096_snp025.h5  hermite4096_snp025.xdmf  hermite4096_snp030.h5  hermite4096_snp030.xdmf  hermite4096_snp035.h5  hermite4096_snp035.xdmf  hermite4096_snp040.h5  hermite4096_snp040.xdmf  hermite4096_snp045.h5  hermite4096_snp045.xdmf  hermite4096_snp050.h5  hermite4096_snp050.xdmf  hermite4096_snp055.h5  hermite4096_snp055.xdmf  hermite4096_snp060.h5  hermite4096_snp060.xdmf  hermite4096_snp065.h5  hermite4096_snp065.xdmf  hermite4096_snp070.h5  hermite4096_snp070.xdmf  hermite4096_snp075.h5  hermite4096_snp075.xdmf  hermite4096_snp080.h5  hermite4096_snp080.xdmf  leapfrog4096_snp000.h5  leapfrog4096_snp000.xdmf  leapfrog4096_snp005.h5  leapfrog4096_snp005.xdmf  leapfrog4096_snp010.h5  leapfrog4096_snp010.xdmf  (+28 more)
gallery/validation/log/: hermite4096_run.csv  leapfrog4096_run.csv
jl/: package.jl
jl/hdf5/: nbody.jl
jl/plot/: dot.jl  error.jl  scaling_elapse.jl  scaling_error.jl
jl/util/: pyplot.jl
modules/: anyenv
modules/miniconda3/: .generic  common
modules/miniforge3/: common  common.bash  common.fish
sh/cfca/: run_cuda.sh  run_nvhpc.sh
sh/miyabi/: make_nvidia.sh  run_cuda.sh  run_cuda_mig.sh  run_nvidia.sh  run_nvidia_mig.sh
sh/miyabi-g/: plot_error.sh  run_cuda_mig.sh  run_nvidia_mig.sh  setup_julia.sh
sh/slurm/: check_conservation_hermite4.sh  check_conservation_leapfrog2.sh  check_performance_scaling.sh  perform_benchmark.sh  plot_parallel.sh  plot_serial.sh  run_cpu.sh
sh/wisteria/: plot_dot.sh  plot_error.sh  plot_error_scaling.sh  prof_cuda.sh  prof_nvidia.sh  run_cuda.sh  run_nvhpc.sh  run_nvidia.sh  setup_julia.sh
sh/wrapper/: mpi_matplotlib.sh
